# HW2_WaterSurface

./: CMakeLists.txt  README.md
shader/: GerstnerWave.vs  SinWave.vs  testShader.vs  water.fs  waterWithTexture.fs
src/: Wave.cpp  Wave.h  gestnerWaveSimulate.cpp  gestnerWaveSimulateWithLight.cpp  sineWaveSimulate.cpp
